poster/paper for SciPy 2024

--- a/01.02-A-More-Involved-Example.ipynb
+++ b/01.02-A-More-Involved-Example.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "cbba6f93-2b10-45bf-9975-a41d30ffd219",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "4a045b14-f578-47ad-9972-a3f5aaba0911",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "0428c276-5ef7-4bde-addf-3bb79337783d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "6d950dbf-dd9a-4735-b98e-d8fa161bdecb",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "f609fec2-3c53-49d4-8cc7-86b8fa00166f",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "8c934b64-4208-4cc9-a55b-702279ee4e48",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "cb867fdb-e283-4973-9e32-5d39c351d943",
    "metadata": {},
    "outputs": [],
@@ -230,18 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "a08c8899-4b11-450d-a0a4-4ebbd76a1d25",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'Alice', 'age': 30}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test our database\n",
     "db = Database() # Real original naming\n",
@@ -252,18 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "c019ed3a-49b1-41bc-b746-365cae5b7ab0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Database: load_csv: file_path =  ./data/ml-latest-small/movies.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try it on our movies file\n",
     "\n",
@@ -276,18 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "66840e8b-1f8c-49cd-a833-e76272c1fd82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Database: load_csv: file_path =  ./data/ml-latest-small/ratings.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's try the ratings file too - see if type conversions work better\n",
     "# userId,movieId,rating,timestamp\n",
@@ -302,30 +278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "836bf743-ce73-435c-bcef-ccc67d4a20c8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'title': 'Toy Story (1995)'},\n",
-       " {'title': 'Jumanji (1995)'},\n",
-       " {'title': 'Grumpier Old Men (1995)'},\n",
-       " {'title': 'Waiting to Exhale (1995)'},\n",
-       " {'title': 'Father of the Bride Part II (1995)'},\n",
-       " {'title': 'Heat (1995)'},\n",
-       " {'title': 'Sabrina (1995)'},\n",
-       " {'title': 'Tom and Huck (1995)'},\n",
-       " {'title': 'Sudden Death (1995)'},\n",
-       " {'title': 'GoldenEye (1995)'}]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# lists all the titles\n",
     "# db.get_table('movies').select(['title'])\n",
@@ -335,35 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "40bf95be-da7a-4ad8-b6a2-064f59e5801b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'movieId': '1', 'rating': 4.0},\n",
-       " {'movieId': '3', 'rating': 4.0},\n",
-       " {'movieId': '6', 'rating': 4.0},\n",
-       " {'movieId': '47', 'rating': 5.0},\n",
-       " {'movieId': '50', 'rating': 5.0},\n",
-       " {'movieId': '70', 'rating': 3.0},\n",
-       " {'movieId': '101', 'rating': 5.0},\n",
-       " {'movieId': '110', 'rating': 4.0},\n",
-       " {'movieId': '151', 'rating': 5.0},\n",
-       " {'movieId': '157', 'rating': 5.0},\n",
-       " {'movieId': '163', 'rating': 5.0},\n",
-       " {'movieId': '216', 'rating': 5.0},\n",
-       " {'movieId': '223', 'rating': 3.0},\n",
-       " {'movieId': '231', 'rating': 5.0},\n",
-       " {'movieId': '235', 'rating': 4.0}]"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ratings found in the file\n",
     "db_movies.get_table('ratings').select(['movieId', 'rating'], limit = 15)"
@@ -397,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "4de8e88c-30aa-4ff5-aa64-d563326d35b6",
    "metadata": {},
    "outputs": [],
@@ -424,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "5141020d-53b1-4c47-949c-50fc46ddf85a",
    "metadata": {},
    "outputs": [],
@@ -436,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "04ea9efe-b544-41a1-8260-31ebb7264348",
    "metadata": {},
    "outputs": [],
@@ -448,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "c6752a17-ea28-49fd-a6b1-2aa3e255b56b",
    "metadata": {},
    "outputs": [],
@@ -475,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "8fe00b05-0a2e-4c44-8b7a-b1da72620589",
    "metadata": {},
    "outputs": [],
@@ -506,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "3b48b1d0-ff43-484c-9e82-22d4dd9e5ce3",
    "metadata": {},
    "outputs": [],
@@ -532,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "691aad7e-9ab1-4e14-be9c-6a7eaaca0a9c",
    "metadata": {},
    "outputs": [],
@@ -571,18 +502,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "bb9ad6b1-aa48-4c51-95b8-84ffa93a7648",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('SELECT', <TokenType.SELECT: 1>), (' ', <TokenType.WHITESPACE: 19>), ('name', <TokenType.IDENTIFIER: 14>), (',', <TokenType.PUNCTUATION: 18>), (' ', <TokenType.WHITESPACE: 19>), ('age', <TokenType.IDENTIFIER: 14>), (' ', <TokenType.WHITESPACE: 19>), ('FROM', <TokenType.FROM: 3>), (' ', <TokenType.WHITESPACE: 19>), ('users', <TokenType.IDENTIFIER: 14>), (' ', <TokenType.WHITESPACE: 19>), ('WHERE', <TokenType.WHERE: 4>), (' ', <TokenType.WHITESPACE: 19>), ('age', <TokenType.IDENTIFIER: 14>), (' ', <TokenType.WHITESPACE: 19>), ('>=', <TokenType.OPERATOR: 17>), (' ', <TokenType.WHITESPACE: 19>), ('21', <TokenType.NUMBER: 16>), (' ', <TokenType.WHITESPACE: 19>), ('AND', <TokenType.IDENTIFIER: 14>), (' ', <TokenType.WHITESPACE: 19>), ('status', <TokenType.IDENTIFIER: 14>), (' ', <TokenType.WHITESPACE: 19>), ('=', <TokenType.OPERATOR: 17>), (' ', <TokenType.WHITESPACE: 19>), (\"'active'\", <TokenType.STRING: 15>), (' ', <TokenType.WHITESPACE: 19>), ('ORDER', <TokenType.ORDER: 7>), (' ', <TokenType.WHITESPACE: 19>), ('BY', <TokenType.BY: 8>), (' ', <TokenType.WHITESPACE: 19>), ('age', <TokenType.IDENTIFIER: 14>), (' ', <TokenType.WHITESPACE: 19>), ('DESC', <TokenType.IDENTIFIER: 14>), (';', <TokenType.PUNCTUATION: 18>)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test \n",
     "sql_query_test_01 = \"SELECT name, age FROM users WHERE age >= 21 AND status = 'active' ORDER BY age DESC;\"\n",
@@ -604,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "fa3245d4-1790-4bc2-b5a6-ab07c0e6206e",
    "metadata": {
     "editable": true,
@@ -623,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "486c901f-8c2b-45f7-956c-dd472a2621a5",
    "metadata": {
     "editable": true,
@@ -644,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "dd56e79f-0fdb-4ea0-89e7-ca4429aaa56f",
    "metadata": {
     "editable": true,
@@ -667,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "7b37ecc7-a112-4983-82f9-9e77c6c90e61",
    "metadata": {
     "editable": true,
@@ -715,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "164c2d1f-ea7d-470d-a6ec-273a11daaeeb",
    "metadata": {
     "editable": true,
@@ -763,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "660c9b33-9368-48cc-a674-c1f871a492d5",
    "metadata": {
     "editable": true,
@@ -791,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "b10ace7b-cd99-4881-ab58-059a9d2ae226",
    "metadata": {
     "editable": true,
@@ -829,25 +752,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "e0bf766c-b00b-4653-9349-0a6df9dc45d3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SQL Query:\n",
-      "\t SELECT name, age FROM users WHERE age > 30\n",
-      "add  name  to list of columns\n",
-      "add  age  to list of columns\n",
-      "SelectStatement: this Select Statement has \n",
-      "Columns:  ['name', 'age'] \n",
-      "Table:  users \n",
-      "WHERE CLAUSE:  None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test this nonsense - need to write a cleaner parser...\n",
     "sql_query_test_02 = \"SELECT name, age FROM users WHERE age > 30\"\n",
@@ -862,26 +770,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "4474085d-5cda-41f3-b0f5-900bee91ed4e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SQL Query:\n",
-      "\t SELECT numpty, humpty, dumpty FROM poems WHERE fall LIKE '%great%'\n",
-      "add  numpty  to list of columns\n",
-      "add  humpty  to list of columns\n",
-      "add  dumpty  to list of columns\n",
-      "SelectStatement: this Select Statement has \n",
-      "Columns:  ['numpty', 'humpty', 'dumpty'] \n",
-      "Table:  poems \n",
-      "WHERE CLAUSE:  None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql_query_test_03 = \"SELECT numpty, humpty, dumpty FROM poems WHERE fall LIKE '%great%'\"\n",
     "print(\"SQL Query:\\n\\t\", sql_query_test_03)\n",
@@ -892,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "b355676a-5cc4-40c3-8a92-d166e1f66140",
    "metadata": {},
    "outputs": [],
@@ -906,12 +798,14 @@
    "id": "176169eb-d0e0-4875-ab59-6d25be8e6e8d",
    "metadata": {},
    "source": [
-    "# Query Planner"
+    "# Query Planner  \n",
+    "  \n",
+    "Given an AST, create a plan for executing the query."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1158793-d2c6-4351-82ef-b115b895cfba",
    "metadata": {},
    "outputs": [],
@@ -929,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3fca5097-94ab-42de-ab3f-344af6d0d25e",
    "metadata": {},
    "outputs": [],
@@ -939,17 +833,15 @@
     "        self.database = database\n",
     "\n",
     "    def create_plan(self, ast):\n",
-    "        \"\"\"\n",
-    "        Create a query execution plan based on the given AST.\n",
-    "        \"\"\"\n",
     "        plan = QueryPlan()\n",
     "\n",
-    "        # Example: Plan for a simple SELECT query\n",
     "        if isinstance(ast, SelectStatement):\n",
     "            # Step 1: Full Table Scan\n",
     "            plan.add_step(('FullTableScan', ast.table_name))\n",
     "\n",
     "            # Step 2: Filter (WHERE clause)\n",
+    "\t\t\t# - like before we are not getting into the where clause\n",
+    "\t\t\t# just to keep things simple and easy to grok\n",
     "            if ast.where_clause:\n",
     "                plan.add_step(('Filter', ast.where_clause))\n",
     "\n",
@@ -964,12 +856,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5567682d-9f45-4119-a7be-cf022c399bcc",
+   "execution_count": 4,
+   "id": "ae9f6a0d-74bf-447c-8035-ac76e78c84ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'db_movies' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# check\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m db_movies\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'db_movies' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# test this sucker\n",
+    "# check\n",
+    "\n",
+    "db_movies\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e93c4e49-df6c-4183-9dda-9a1d474bfcc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'db' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# check\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m planner \u001b[38;5;241m=\u001b[39m QueryPlanner(db)\n\u001b[0;32m      3\u001b[0m plan \u001b[38;5;241m=\u001b[39m planner\u001b[38;5;241m.\u001b[39mcreate_plan(ast)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'db' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "planner = QueryPlanner(db)\n",
     "plan = planner.create_plan(ast)  # Assuming 'ast' is an AST from the parser"
    ]
@@ -1004,25 +932,16 @@
     "        self.database = database\n",
     "\n",
     "    def optimize(self, plan):\n",
-    "        \"\"\"\n",
-    "        Optimize the given query plan.\n",
-    "        \"\"\"\n",
     "        optimized_plan = self._apply_predicate_pushdown(plan)\n",
     "        optimized_plan = self._apply_join_reordering(optimized_plan)\n",
     "        return optimized_plan\n",
     "\n",
     "    def _apply_predicate_pushdown(self, plan):\n",
-    "        \"\"\"\n",
-    "        Apply predicate pushdown optimization.\n",
-    "        \"\"\"\n",
     "        # This is a placeholder for predicate pushdown logic.\n",
     "        # In practice, you would modify the plan to move filters closer to the data source.\n",
     "        return plan\n",
     "\n",
     "    def _apply_join_reordering(self, plan):\n",
-    "        \"\"\"\n",
-    "        Apply join reordering based on a simple heuristic or cost model.\n",
-    "        \"\"\"\n",
     "        # This is a placeholder for join reordering logic.\n",
     "        # In practice, you would reorder joins based on size, indexes, or other factors.\n",
     "        return plan"
@@ -1150,37 +1069,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "982bc3f6-a780-401b-bc2f-f9d2399f84e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_executable_plan(plan, database):\n",
-    "    \"\"\"\n",
-    "    Translate the optimized query plan into executable operations.\n",
-    "    \"\"\"\n",
-    "    executable_plan = []\n",
-    "    for step in plan.steps:\n",
-    "        if step[0] == 'FullTableScan':\n",
-    "            table_name = step[1]\n",
-    "            executable_plan.append(TableScanOperator(database.get_table(table_name)))\n",
+    "\texecutable_plan = []\n",
+    "\tfor step in plan.steps:\n",
+    "\t\t\tif step[0] == 'FullTableScan':\n",
+    "\t\t\t\ttable_name = step[1]\n",
+    "\t\t\t\texecutable_plan.append(TableScanOperator(database.get_table(table_name)))\n",
     "\n",
-    "        elif step[0] == 'Select':\n",
-    "            columns = step[1]\n",
-    "            input_operator = executable_plan[-1]  # The input is the result of the previous step\n",
-    "            executable_plan.append(SelectOperator(input_operator, columns))\n",
+    "\t\t\telif step[0] == 'Select':\n",
+    "\t\t\t\tcolumns = step[1]\n",
+    "\t\t\t\tinput_operator = executable_plan[-1]\t# The input is the result of the previous step\n",
+    "\t\t\t\texecutable_plan.append(SelectOperator(input_operator, columns))\n",
     "\n",
-    "        # elif step[0] == 'Join':\n",
-    "        #     # Assuming step format is ('Join', right_table_name, join_condition)\n",
-    "        #     right_table = database.get_table(step[1])\n",
-    "        #     join_condition = step[2]\n",
-    "        #     left_operator = executable_plan[-1]\n",
-    "        #     right_operator = TableScanOperator(right_table)\n",
-    "        #     executable_plan.append(JoinOperator(left_operator, right_operator, join_condition))\n",
+    "\t\t\t# just fo sho - first get the where clause sorted...\n",
+    "\t\t\t# elif step[0] == 'Join':\n",
+    "\t\t\t#\t\t# Assuming step format is ('Join', right_table_name, join_condition)\n",
+    "\t\t\t#\t\tright_table = database.get_table(step[1])\n",
+    "\t\t\t#\t\tjoin_condition = step[2]\n",
+    "\t\t\t#\t\tleft_operator = executable_plan[-1]\n",
+    "\t\t\t#\t\tright_operator = TableScanOperator(right_table)\n",
+    "\t\t\t#\t\texecutable_plan.append(JoinOperator(left_operator, right_operator, join_condition))\n",
     "\n",
-    "        # Add cases for other types of steps (e.g., 'GroupBy', 'Filter')\n",
+    "\t\t\t# Add cases for other types of steps ('GroupBy', 'Filter' etc etc here...)\n",
     "\n",
-    "    return executable_plan\n"
+    "\treturn executable_plan"
    ]
   },
   {
@@ -1254,15 +1171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a77dde7-b426-4a2b-a247-547b8c572f7b",
-   "metadata": {},
-   "source": [
-    "Wait, was it this simple?   \n",
-    "Yea!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e9cd9648-5a13-446f-a775-76616ace03c1",
    "metadata": {},
    "source": [
@@ -1274,7 +1182,7 @@
    "id": "f30f9979-d5c1-4fa6-875d-76e2c017ec76",
    "metadata": {},
    "source": [
-    "Building a more feature rich data engine"
+    "That Where clause, JOINS and Optimizers"
    ]
   }
  ],
