--- a/01.02-A-More-Involved-Example.ipynb
+++ b/01.02-A-More-Involved-Example.ipynb
@@ -122,10 +122,138 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c868ffc-2792-49e8-9077-92d75fe24264",
+   "metadata": {},
+   "source": [
+    "# Invert the Pyramid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a5a3fd3-9a50-4cd8-902a-0626f0cd814e",
+   "metadata": {},
+   "source": [
+    "Once we build it what would our data engine look like?  \n",
+    "  \n",
+    "Let's viz the final code, so we have a map of the terrain before starting the hike."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "145a79cf-2d41-4585-94d2-5231787e8785",
+   "metadata": {},
+   "source": [
+    "<font color='red'>Uncommenting the following code will cause miniature blackholes to condense on your microchip. <br/>**Don't do it.**</font> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2b39a22-288b-4fdb-a40e-4688edb0ca71",
+   "metadata": {},
+   "source": [
+    "### Create a database and a table and data in the table \n",
+    "```# db = Database()```  \n",
+    "```# db.create_table('table_name', [Column('col1', str), Column('col2', str), Column('col3', str)])```  \n",
+    "```# db.load_csv('table_name', file_path)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a9c8b3-5304-4748-bbc4-11bb3977db45",
+   "metadata": {},
+   "source": [
+    "### Example query    \n",
+    "```# sql_query = \"SELECT genres FROM movies WHERE genres = 'Comedy'\"```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0d5fb99-a419-4488-9a29-50c21239e10e",
+   "metadata": {},
+   "source": [
+    "### Parsing the query to AST    \n",
+    "```# tokens = tokenize(sql_query)```  \n",
+    "```# parser = Parser(iter(tokens))```  \n",
+    "```# ast = parser.parse()```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d06be60-5cbb-4c18-a066-b03237f7412a",
+   "metadata": {},
+   "source": [
+    "### Creating the query plan  \n",
+    "```# planner = QueryPlanner(db)```  \n",
+    "```# plan = planner.create_plan(ast)```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30d2ea55-6026-4160-8e9d-7c23e261aa48",
+   "metadata": {},
+   "source": [
+    "### Optimizing the query plan  \n",
+    "```# optimizer = QueryOptimizer(db)```  \n",
+    "```# optimized_plan = optimizer.optimize(plan)```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6a3d393-6eec-427d-a7a5-7f76a201deb8",
+   "metadata": {},
+   "source": [
+    "### Creating the execution plan  \n",
+    "```# execution_plan = create_executable_plan(optimized_plan, db)```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bf34d58-549f-418d-8f9f-43d0ae6615a3",
+   "metadata": {},
+   "source": [
+    "### Executing the query    \n",
+    "```# query_result, query_costs = execute_query(executable_plan)```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53897bec-d2d0-4dad-a2a2-d753e2703d52",
+   "metadata": {},
+   "source": [
+    "### Output the result  \n",
+    "```# print(query_costs)```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08fcac81-fb3c-4f6d-b30c-83a58c812312",
+   "metadata": {},
+   "source": [
+    "# Import the dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de8e88c-30aa-4ff5-aa64-d563326d35b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import re\n",
+    "from typing import List, NamedTuple\n",
+    "from enum import Enum, auto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8d255be8-5ace-496d-9616-5ff1984207ed",
    "metadata": {},
    "source": [
-    "# Storage Layer"
+    "# Storage Layer  \n",
+    "  \n",
+    "Manages I/O  \n",
+    "If we try, this can be a mini data engine all by itself  "
    ]
   },
   {
@@ -219,7 +347,6 @@
     "\t\ttable = self.get_table(table_name)\n",
     "\t\tif not table:\n",
     "\t\t\traise ValueError(f\"Table {table_name} does not exist\")\n",
-    "\n",
     "\t\t# pay attention to the dialect of the CSV\n",
     "\t\twith open(file_path, 'r', encoding='utf-8') as file:\n",
     "\t\t\treader = csv.DictReader(file, delimiter=delimiter, quotechar=quotechar, escapechar=escapechar, quoting=quoting)\n",
@@ -236,10 +363,10 @@
    "outputs": [],
    "source": [
     "# Test our database\n",
-    "db = Database() # Real original naming\n",
-    "db.create_table('users', [Column('name', str), Column('age', int)])\n",
-    "db.get_table('users').insert({'name': 'Alice', 'age': 30})\n",
-    "print(db.get_table('users').select(['name', 'age']))"
+    "db_test = Database() # Real original naming\n",
+    "db_test.create_table('users', [Column('name', str), Column('age', int)])\n",
+    "db_test.get_table('users').insert({'name': 'Alice', 'age': 30})\n",
+    "print(db_test.get_table('users').select(['name', 'age']))"
    ]
   },
   {
@@ -250,9 +377,7 @@
    "outputs": [],
    "source": [
     "# Try it on our movies file\n",
-    "\n",
     "# movieId,title,genres\n",
-    "\n",
     "db_movies = Database()\n",
     "db_movies.create_table('movies', [Column('movieId', str), Column('title', str), Column('genres', str)])\n",
     "db_movies.load_csv('movies', file_path_movies)"
@@ -324,19 +449,6 @@
     "This can sound confusing at first, only because lots of nouns are involved.   \n",
     "Stay with it, it's really simple.  \n",
     "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4de8e88c-30aa-4ff5-aa64-d563326d35b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "import re\n",
-    "from typing import List, NamedTuple\n",
-    "from enum import Enum, auto"
    ]
   },
   {
@@ -699,7 +811,6 @@
    "source": [
     "# sooo much simpler! I have to do a better parse_columns... \n",
     "def _parse_table_name(self):\n",
-    "\t\"\"\"Parse the table name.\"\"\"\n",
     "\t# skip whitespace\n",
     "\twhile self.current_token[1] == TokenType.WHITESPACE:\n",
     "\t\tself._next_token()\n",
@@ -728,7 +839,6 @@
     "# TODO - I need to do a better version here...\n",
     "# generates a WhereClause AST node\n",
     "def _parse_where_clause(self):\n",
-    "\t\"\"\"Parse the WHERE clause.\"\"\"\n",
     "\t# In a full implementation, this would need to handle complex expressions.\n",
     "\t# For simplicity, we'll assume it's just a single condition.\n",
     "\tif self.current_token[1] != TokenType.IDENTIFIER and self.current_token[1] != TokenType.WHITESPACE:\n",
@@ -805,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f1158793-d2c6-4351-82ef-b115b895cfba",
    "metadata": {},
    "outputs": [],
@@ -823,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3fca5097-94ab-42de-ab3f-344af6d0d25e",
    "metadata": {},
    "outputs": [],
@@ -856,22 +966,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ae9f6a0d-74bf-447c-8035-ac76e78c84ce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'db_movies' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# check\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m db_movies\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'db_movies' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check\n",
     "\n",
@@ -884,19 +982,7 @@
    "execution_count": null,
    "id": "e93c4e49-df6c-4183-9dda-9a1d474bfcc6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'db' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# check\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m planner \u001b[38;5;241m=\u001b[39m QueryPlanner(db)\n\u001b[0;32m      3\u001b[0m plan \u001b[38;5;241m=\u001b[39m planner\u001b[38;5;241m.\u001b[39mcreate_plan(ast)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'db' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "planner = QueryPlanner(db)\n",
     "plan = planner.create_plan(ast)  # Assuming 'ast' is an AST from the parser"
@@ -1069,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "982bc3f6-a780-401b-bc2f-f9d2399f84e9",
    "metadata": {},
    "outputs": [],
@@ -1116,9 +1202,6 @@
    "outputs": [],
    "source": [
     "def execute_query(executable_plan):\n",
-    "\t\"\"\"\n",
-    "\tExecute the query by running each operation in the executable plan.\n",
-    "\t\"\"\"\n",
     "\tfor operator in executable_plan:\n",
     "\t\tcost = {}\n",
     "\t\tresult = operator.execute()\n",
@@ -1129,45 +1212,204 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "196bfdcb-1def-45cc-8489-ef6e2afbc71a",
+   "cell_type": "markdown",
+   "id": "1064f528-f2a5-4ec4-9d49-024382dc82f7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Example query\n",
-    "sql_query = \"SELECT genres FROM movies WHERE genres = 'Comedy'\"\n",
-    "\n",
-    "# Parsing the query to AST\n",
-    "tokens = tokenize(sql_query)\n",
-    "parser = Parser(iter(tokens))\n",
-    "ast = parser.parse()\n",
-    "\n",
-    "# Creating the query plan\n",
-    "planner = QueryPlanner(db)\n",
-    "plan = planner.create_plan(ast)\n",
-    "\n",
-    "# Optimizing the query plan\n",
-    "optimizer = QueryOptimizer(db)\n",
-    "optimized_plan = optimizer.optimize(plan)\n",
-    "\n",
-    "# Creating the executable plan\n",
-    "executable_plan = create_executable_plan(optimized_plan, db)\n",
-    "\n",
-    "# Executing the query\n",
-    "query_result, query_costs = execute_query(executable_plan)\n",
-    "\n",
-    "# Output the result\n",
-    "print(query_costs)\n"
+    "# The Pyramid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8802ce79-1283-40d6-854c-7a3301a712ae",
+   "metadata": {},
+   "source": [
+    "Test the final engine, this is where the pudding rubber meets the pudding road, just to mix my metaphors...  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5bfb123-8ab4-4569-a65d-c420fef50db6",
+   "metadata": {},
+   "source": [
+    "<font color='red'><br/>**Stand Back, this may blow up**</font> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ced50d1-80ac-41fa-a1ba-c32ef950a2f1",
+   "metadata": {},
+   "source": [
+    "### Create a database and a table and data in the table "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4a82fa9-167a-4818-810b-2b0d088e00fd",
+   "id": "028974b5-5858-4fd7-98ed-da806ed9335a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db = Database()\n",
+    "db.create_table('movies', [Column('movieId', str), Column('title', str), Column('genres', str)])\n",
+    "db.load_csv('movies', file_path_movies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b4dfc6-e0df-464c-aa8d-ecfa2d251b8a",
+   "metadata": {},
+   "source": [
+    "### Example query    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eea0ff72-84b8-4607-939b-16796355d188",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example query\n",
+    "sql_query = \"SELECT genres FROM movies WHERE genres = 'Comedy'\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e7b47a-8d5b-4b29-b79c-315a9c1646ba",
+   "metadata": {},
+   "source": [
+    "### Parsing the query to AST    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d1b1f0b-f271-410d-92c1-23f4fb4e0c22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parsing the query to AST\n",
+    "tokens = tokenize(sql_query)\n",
+    "parser = Parser(iter(tokens))\n",
+    "ast = parser.parse()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e63a8217-7518-4d69-b655-b95b70f08e20",
+   "metadata": {},
+   "source": [
+    "### Creating the query plan    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05a6441f-42bf-4818-a641-022edabd2bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the query plan\n",
+    "planner = QueryPlanner(db)\n",
+    "plan = planner.create_plan(ast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4277d38-c78c-4190-956d-7b9eab33fd80",
+   "metadata": {},
+   "source": [
+    "### Optimizing the query plan   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7015c9d-7e16-4c3d-8374-a1094f96b2fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimizing the query plan\n",
+    "optimizer = QueryOptimizer(db)\n",
+    "optimized_plan = optimizer.optimize(plan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae7cb881-2ed1-4be0-820c-10012cdb815d",
+   "metadata": {},
+   "source": [
+    "### Creating the execution plan   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a679c3e2-b5f7-4131-8f27-4d7c6201abd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the executable plan\n",
+    "executable_plan = create_executable_plan(optimized_plan, db)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1b97eaf-4cc6-4748-9332-7e8c2c717b73",
+   "metadata": {},
+   "source": [
+    "### Executing the query      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e74dd474-be76-4f11-bbcd-f960116e8f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Executing the query\n",
+    "query_result, query_costs = execute_query(executable_plan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f7c4bbc-e4a9-4c5d-ad1d-cedbff7fcb3c",
+   "metadata": {},
+   "source": [
+    "### Output the result  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "430d318b-6871-4f99-96ae-f277f03f5c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output the result\n",
+    "print(query_costs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cf78d95-a9b5-47eb-bfa0-801e59dc8e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output the result\n",
+    "print(query_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7dfaa8e-fe21-4f6d-8158-b45e8348ecc6",
+   "metadata": {},
+   "source": [
+    "Whoa!"
+   ]
   },
   {
    "cell_type": "markdown",
